--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -4,17 +4,20 @@ body{
     margin-top: 2%;
     align-items: center;
     text-align: center;
+    background: #bfe0fa;
 }
 .inputLetra{
-    margin-right: 35%;
-    margin-left: 35%;
+    margin-right: 37%;
+    margin-left: 37%;
     margin-top: 2%;
     align-items: center;
     text-align: center;
 }
+.carta{
+}
 .imagenHorcado{
-    margin-right: 40%;
-    margin-left: 40%;
+    margin-right: 41%;
+    margin-left: 41%;
     margin-top: 2%;
     align-items: center;
 
