--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,10 +1,14 @@
-.body-game{
+body{
     margin-right: 5%;
     margin-left: 5%;
     margin-top: 2%;
     align-items: center;
     text-align: center;
-    background: #bfe0fa;
+    background: #a0e5fa;
+}
+.body-game{
+    background: #b0ddff;
+
 }
 .inputLetra{
 
@@ -14,6 +18,7 @@
     text-align: center;
 }
 .carta{
+
 }
 .imagenHorcado{
     margin-right: 41%;
