nuevas vistas y Router React

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,63 +1,5 @@
 body{
-    margin-right: 15%;
-    margin-left: 15%;
-    margin-top: 2%;
     align-items: center;
     text-align: center;
-    background: white;
-}
-.body-game{
-    border-radius: 5px;
-    background: #b798e0;
-    color: black;
-
-}
-#TextArea{
-    text-align: center;
-}
-#iniciarJuego{
-    margin-right: 2%;
-    margin-bottom: 1%;
-    margin-top: 1%;
-    text-align: end;
-    border-radius: 5px ;
-    background: #ffe4f4;
-    border-color: black;
-    border-width: 2px;
-    color: #000;
-}
-#inputLetra{
-
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 2%;
-
-    align-items: center;
-    text-align: center;
-}
-#IngresarLetra{
-    margin-right: 9%;
-    background: #ffe4f4;
-    border-color: black;
-    border-width: 2px;
-    color: #000;
-    font-weight: normal;
-}
-#letraBuscada{
-    margin-right: 9%;
-    border-color: black;
-    border-width: 2px;
-    color: #000;
-    font-weight: normal;
-}
-.card{
-   background: #f8efed;
-}
-.imagenHorcado{
-    margin-right: 30%;
-    margin-left: 30%;
-    margin-top: 2%;
-    align-items: center;
-    margin-inside: 2%;
-
+    background: #62dcf1;
 }
